@@ -1,3 +1,9 @@
+2008-04-16  Christian Kellner  <gicmo@gnome.org>
+
+	* daemon/gvfsbackendhttp.c:
+	Add logging for soup so we can get easy network traces even
+	if we are doing https.
+
 2008-04-15  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 526454 – too early use of dbus session bus
